fixed overflow projects

--- a/src/Components/Hero/hero.css
+++ b/src/Components/Hero/hero.css
@@ -1,5 +1,5 @@
 .hero-section {
-  padding: 1em;
+  padding: 9em;
   min-height: 100vh;
   display:grid;
   grid-gap:1em;
@@ -50,6 +50,7 @@
 
 @media (max-width: 768px) {
   .hero-section{
+    padding:1em;
     grid-template-columns:1fr;
     grid-template-rows:repeat(2, auto);
     height:50em;
