--- a/src/Layout/Projects/projects.css
+++ b/src/Layout/Projects/projects.css
@@ -1,4 +1,5 @@
 .project-section {
+  padding-inline:1.5em;
   display: flex;
   gap: 2em;
   justify-content: space-evenly;
@@ -6,6 +7,7 @@
 
 @media (max-width:786px){
   .project-section {
+    pad-inline:0em;
     flex-wrap: wrap;
   }
 }
